runit (0.2.2-1) woody; urgency=low

  * See /package/admin/runit/package/CHANGES.

 -- Gerrit Pape <pape@smarden.org>  Sat, 22 Dec 2001 20:37:03 +0100

runit (0.1.1-1) woody; urgency=low

  * Initial Release.

 -- Gerrit Pape <pape@smarden.org>  Tue, 20 Nov 2001 11:56:58 +0100

Local variables:
mode: debian-changelog
End: